--- a/assets/main.css
+++ b/assets/main.css
@@ -52,6 +52,7 @@ pre {
     padding: 1em;
     border-radius: 3px;
 }
+
 /* Button styles */
 nav ul li a {
     display: inline-block;
@@ -98,21 +99,22 @@ section h2 {
     color: #999;
 }
 
-/* reduce font size for authored and modified date */
-div.content div[style="font-size: 0.8em;"] {
-    font-size: 0.6em;
-}
-
-/* add bar under authored and modified date */
-div.content div[style="font-size: 0.8em;"]:after {
-    content: "";
-    display: block;
-    margin-top: 5px;
+/* Added styles */
+.page-info {
+    font-size: 0.8em;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     margin-bottom: 5px;
-    border-bottom: 1px solid #14ee00;
 }
 
-/* align authored and modified date to the right */
-div.content div[style="font-size: 0.8em;"] {
-    text-align: right;
+.page-info-text {
+    margin-right: 5px;
+}
+
+.page-info-bar {
+    flex-grow: 1;
+    height: 1px;
+    background-color: #555;
+    margin-left: 5px;
 }
